--- a/frontend/attryb_cars/src/styles/signUp.css
+++ b/frontend/attryb_cars/src/styles/signUp.css
@@ -4,6 +4,8 @@
     /* height: auto; */
 }
 
+
+
 #register{
     /* border: 1px solid red; */
     width: 30%;
@@ -20,10 +22,12 @@
     
 }
 
-#register>img{
+#logImg{
     width: 25%;
     height: 40px;
+    margin: auto;
 }
+
 
 #txt2{
     font-family: 'Courier New', Courier, monospace;
@@ -57,12 +61,13 @@
 
 #btn2{
     font-size: 25px;
-    padding: 10px 30px;
+    padding: 5px 20px;
     font-family: 'Courier New', Courier, monospace;
     font-weight: 800;
     cursor: pointer;
     margin-top: 30px;
     border-radius: 20px;
+    border: 2px solid black;
 }
 
 #btn2:hover{
