--- a/frontend/attryb_cars/src/styles/navbar.css
+++ b/frontend/attryb_cars/src/styles/navbar.css
@@ -83,3 +83,20 @@
     font-weight: 600;
     border-radius: 5px;
 }
+
+
+#admn{
+    /* margin-right: 30px; */
+    border: 1px solid rgb(16, 0, 0);
+    padding: 8px 20px;
+    /* background-color: yellow; */
+    font-size: 20px;
+    font-weight: 600;
+    border-radius: 5px;
+    margin-right: 30px;
+}
+
+#admn:hover{
+    background-color: black;
+    color: white;
+}
